Stop rounding vertical position for 'vertical-align: middle'

This patch stops rounding vertical position for 'vertical-
align: middle'.

The rounding was added in 2012[1], for crbug.com/130888
(wkbug.com/91464) where 'vertical-align: middle' causes
overflow with subpixel layout.
The vertical-position is accumulated in multiple levels
in the current layout engine. It is computed in this
function, then tweaked in ComputeLogicalBoxHeights,
ComputeLogicalBoxHeights, and maybe a few more.

Since when Blink enabled fractional (LayoutUnit) baseline
position in CL:543141, rounding earlier makes harder to
align to boxes that are computed in different way but
should result in the same vertical position. By not
rounding in this function, the mentioned CL rounds in
caller functions.

This patch changes heights and vertical positions in ~10
test results, but not vertical-align-middle-overflow.html,
the test added by the change above.

As this change requires rebaselines, this may break other
cases, or still different rounding may be applied by
different scenarios. Not all cases are trackable, but new
baselines look more similar to LayoutNG, which computes
vertical position only once.

[1] https://trac.webkit.org/changeset/122883/webkit

Bug: 780862
Change-Id: Icc8868952428950e5e10036ddef2b6daa07f4ba2
Reviewed-on: https://chromium-review.googlesource.com/1088334
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565146}
Former-commit-id: eb41d43f5cd0e6debb1f001291d7d13b3f4826b4